# OSynaptic-FX

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Config.json  README.md  README.zh.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  keywords.txt  library.properties
.github/workflows/: build.yml  ci-cl.yml  ci-clang.yml  ci-gcc.yml  ci.yml  release.yml
cmake/: osfx-c99Config.cmake.in
cmake/toolchains/: android-aarch64.cmake  arm-cortexm4.cmake  ios-arm64.cmake  riscv32-elf.cmake  rp2040.cmake  wasm-emscripten.cmake
docs/: 01-overview.md  02-architecture.md  03-api-index.md  04-plugin-scope-and-commands.md  05-port-forwarder.md  06-cli.md  08-release-notes.md  09-mirror-coverage-report.md  10-acceptance-checklist.md  12-config-quick-reference.md  15-release-playbook.md  16-examples-cookbook.md  17-glue-step-by-step.md  18-data-format-specification.md  18-standardized-units.md  19-input-specification.md  20-arduino-easy-api.md  CHANGELOG.md  README.md  SUMMARY.md
docs/templates/: changelog-template.md
examples/: README.md
examples/BasicEncode/: BasicEncode.ino
examples/BootCliOrRun/: BootCliOrRun.ino
examples/ESP32WiFiMultiSensorAuto/: ESP32WiFiMultiSensorAuto.ino
examples/EasyQuickStart/: EasyQuickStart.ino
examples/FusionAutoMode/: FusionAutoMode.ino
examples/FusionModeTest/: FusionModeTest.ino
examples/MultiSensorNodePacket/: MultiSensorNodePacket.ino
examples/PacketMetaDecode/: PacketMetaDecode.ino
examples/QuickBench/: QuickBench.ino
examples/SecureSessionRoundtrip/: SecureSessionRoundtrip.ino
extras/precompiled-non-arduino/: README.md
include/: osfx_build_config.h  osfx_cli_lite.h  osfx_core.h  osfx_fusion_packet.h  osfx_fusion_state.h  osfx_glue.h  osfx_handshake_cmd.h  osfx_handshake_dispatch.h  osfx_id_allocator.h  osfx_library_catalog.h  osfx_ops.h  osfx_payload_crypto.h  osfx_platform_runtime.h  osfx_plugin_port_forwarder.h  osfx_plugin_test.h  osfx_plugin_transport.h  osfx_protocol_matrix.h  osfx_secure_session.h  osfx_service_runtime.h  osfx_solidity.h  osfx_standardization.h  osfx_template_grammar.h  osfx_transporter_runtime.h  osfx_user_config.h
scripts/: bench.ps1  build.ps1  generate_library_data.ps1  test.ps1
src/: OSynappticFX.h  osfx_cli_lite.c  osfx_core_facade.c  osfx_fusion_packet.c  osfx_fusion_state.c  osfx_glue.c  osfx_handshake_cmd.c  osfx_handshake_dispatch.c  osfx_id_allocator.c  osfx_library_catalog.c  osfx_library_data.generated.h  osfx_ops.c  osfx_payload_crypto.c  osfx_platform_runtime.c  osfx_plugin_port_forwarder.c  osfx_plugin_test.c  osfx_plugin_transport.c  osfx_protocol_matrix.c  osfx_secure_session.c  osfx_service_runtime.c  osfx_solidity.c  osfx_standardization.c  osfx_template_grammar.c  osfx_transporter_runtime.c
tests/: test_osfx_core.c  test_osfx_integration.c
tools/: osfx_bench_main.c  osfx_cli_main.c  osfx_dump_example.c
